# diplom_1

./: Dockerfile.prod  ReadME.md  diplom  diplom.pub  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0001_override_custom_user_model.py
deploy/: docker-compose.yaml  nginx.conf
todolist/: fields.py  settings.py  urls.py
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_initial.py
todolist/bot/tg/: base_state.py  bot_dao.py  bot_session.py  bot_state.py  client.py  dc.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goalds_category_model.py  0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
todolist/goals/models/: board.py  category.py  category_models.py  comment.py  comment_models.py  dates_model_mixin.py  goal.py  goal_models.py
todolist/goals/serializers/: board.py  category.py  comment.py  goal.py
todolist/goals/views/: board.py  category.py  comment.py  goal.py
todolist/tests/: conftest.py  factories.py  fixtures.py
todolist/tests/core/: user_test.py
todolist/tests/goals/: board_test.py  category_test.py  comment_test.py  goal_test.py
